section align fix

--- a/scss/__body.scss
+++ b/scss/__body.scss
@@ -115,8 +115,7 @@ p {
     display: flex;
     align-items: center;
     flex-direction: column;
-    justify-content: space-between;
-    justify-items: center;
+    justify-content: center;
     padding: 20px;
     width: 100%;
     position: relative;
